k8s/k8s-kustomize/default/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-engine-svc
  labels:
    app: go-engine-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-engine-svc
  template:
    metadata:
      labels:
        app: go-engine-svc
    spec:
      serviceAccountName: go-engine-svc
      securityContext: {}
      containers:
        - name: go-engine-svc
          securityContext: {}
          image: ""
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          livenessProbe: {}
          readinessProbe: {}
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 200m
              memory: 256Mi
