k8s/k8s-kustomize/default/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-engine-svc
  labels:
    app: go-engine-svc
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: go-engine-svc
