k8s/k8s-kustomize/default/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-engine-svc
  labels:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "false"
spec:
  rules:
    - http:
        paths:
          - path: /engines
            pathType: Exact
            backend:
              service:
                name: go-engine-svc
                port:
                  number: 80
